added image and started on carouself

--- a/index.html
+++ b/index.html
@@ -21,12 +21,19 @@
 					<li><a href="" class="nav__links">products</a></li>
 					<li><a href="" class="nav__links">about</a></li>
 					<li><a href="" class="nav__links">contact</a></li>
-					<li>
-						<a href="" class="nav__links"
-							>shopping cart</a>
-					</li>
+					<li><a href="" class="nav__links">shopping cart</a></li>
 				</ul>
 			</nav>
 		</header>
+        <div class="carousel__container">
+            <div class="card">
+                <img src="./images/bruiser.png" alt="jacket image">
+            </div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+        </div>
 	</body>
 </html>
