first day setup nav and carousel

--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
 	</head>
 	<body>
 		<header>
-			<nav class="flex column">
-				<div class="logo">
-					<a href="#">
-						<img src="./images/logo.png" alt="logo image" />
-					</a>
-				</div>
+			<nav class="flex">
+                <a href="#" class="logo">
+                    <img src="./images/logo.png" alt="logo image" />
+                </a>
 				<ul class="flex">
 					<li><a href="" class="nav__links">home</a></li>
 					<li><a href="" class="nav__links">products</a></li>
@@ -27,13 +25,14 @@
 		</header>
         <div class="carousel__container">
             <div class="card">
-                <img src="./images/bruiser.png" alt="jacket image">
+                <img src="" alt="">
             </div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
+            <div class="card">
+                <img src="./images/bruiser.png" alt="">
+            </div>
+            <div class="card">
+                <img src="" alt="">
+            </div>
         </div>
 	</body>
 </html>
