added data console log of api

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
                     <img src="./images/logo.png" alt="logo image" />
                 </a>
 				<ul class="flex">
-					<li><a href="" class="nav__links">home</a></li>
-					<li><a href="" class="nav__links">products</a></li>
-					<li><a href="" class="nav__links">about</a></li>
-					<li><a href="" class="nav__links">contact</a></li>
-					<li><a href="" class="nav__links">shopping cart</a></li>
+					<li><a href="./index.html" class="nav__links">home</a></li>
+					<li><a href="./index.html" class="nav__links">products</a></li>
+					<li><a href="./index.html" class="nav__links">about</a></li>
+					<li><a href="./index.html" class="nav__links">contact</a></li>
+					<li><a href="./index.html" class="nav__links">shopping cart</a></li>
 				</ul>
 			</nav>
 		</header>
