--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 					<li class="carousel__card">
 						<img src="./images/bruiser.png" alt="" />
 					</li>
+					<li class="carousel__card">
+						<img src="./images/bruiser.png" alt="" />
+					</li>
 				</ul>
 			</div>
 			<div class="scroll__wrapper">
@@ -101,23 +104,43 @@
 				</div>
 			</div>
 		</main>
-		<footer>
+		<footer class="flex">
 			<div class="footer__wrapper flex">
 				<ul class="contact__info flex column" aria-label="contact information">
 					<li aria-label="address of headquarters">Rainydays Inc</br>Middlebury, IN 46540</li>
 					<li aria-label="telephone number">+47 909 ** 063</li>
 					<li aria-label="email">whats_your_problem?@rainydays.wtf</li>
 				</ul>
-				<form action="join" class="mailing__list flex column">
-					<h3>Join our mailing list!</h3>
-					<input type="email" name="mailingList" id="mailingList">
-					<button type="submit">Join Now</button>
-				</form>
-				<form action="contact" class="contact__form flex column">
-					<h3>Contact us</h3>
-					<input type="email" name="contactForm" id="contactForm">
-					<button type="submit">Leave us a message</button>
-				</form>
+				<div class="form__wrapper flex">
+					<form action="join" class="mailing__list flex column">
+						<h3>Join our mailing list!</h3>
+						<input type="email" name="mailingList" id="mailingList" placeholder="enter your email here">
+						<button type="submit">Join Now</button>
+					</form>
+					<form action="contact" class="contact__form flex column">
+						<h3>Contact us</h3>
+						<input type="text" name="contactName" id="contactName" placeholder="name">
+						<input type="email" name="contactMail" id="contactMail" placeholder="email">
+						<button type="submit">Leave us a message</button>
+					</form>
+				</div>
+				<div class="social__icons flex">
+					<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+						<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+						<path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
+					</svg>
+					
+					<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+						<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+						<path d="M4 4m0 4a4 4 0 0 1 4 -4h8a4 4 0 0 1 4 4v8a4 4 0 0 1 -4 4h-8a4 4 0 0 1 -4 -4z" />
+						<path d="M12 12m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0" />
+						<path d="M16.5 7.5l0 .01" />
+					</svg>
+					<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-twitter" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+						<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+						<path d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c0 -.249 1.51 -2.772 1.818 -4.013z" />
+					</svg>
+				</div>
 			</div>
 		</footer>
 	</body>
