more divs to carousel

--- a/index.html
+++ b/index.html
@@ -53,6 +53,24 @@
 					<li class="carousel__card">
 						<img src="./images/bruiser.png" alt="" />
 					</li>
+					<li class="carousel__card">
+						<img src="./images/bruiser.png" alt="" />
+					</li>
+					<li class="carousel__card">
+						<img src="./images/bruiser.png" alt="" />
+					</li>
+					<li class="carousel__card">
+						<img src="./images/bruiser.png" alt="" />
+					</li>
+					<li class="carousel__card">
+						<img src="./images/bruiser.png" alt="" />
+					</li>
+					<li class="carousel__card">
+						<img src="./images/bruiser.png" alt="" />
+					</li>
+					<li class="carousel__card">
+						<img src="./images/bruiser.png" alt="" />
+					</li>
 				</ul>
 			</div>
 			<div class="scroll__wrapper">
