--- a/index.html
+++ b/index.html
@@ -29,14 +29,9 @@
 						stroke-linejoin="round"
 						aria-expanded="false"
 					>
-						<path
-							stroke="none"
-							d="M0 0h24v24H0z"
-							fill="none"
-						></path>
-						<path d="M4 6l16 0" id="topLine"></path>
-						<path d="M4 12l16 0" id="midLine"></path>
-						<path d="M4 18l16 0" id="botLine"></path>
+						<path d="M4 6l16 0" id="topLine" class="top__line"></path>
+						<path d="M4 12l16 0" id="midLine" class="mid__line"></path>
+						<path d="M4 18l16 0" id="botLine" class="bot__line"></path>
 					</svg>
 				</div>
 				<ul class="nav__links flex">
