--- a/product.html
+++ b/product.html
@@ -4,10 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="filterable list of all products">
+        <meta name="description" content="individual product page">
 		<link rel="stylesheet" href="./style.css" />
-        <script type="module" src="./js/products.js"></script>
-		<title>Rainydays Jacket Co. | Products</title>
+		<title>Rainydays Jacket Co. | Product</title>
 	</head>
 	<body>
 		<header>
@@ -38,7 +37,7 @@
 				<ul class="nav__links flex">
 					<li><a href="./index.html" class="nav__link" aria-disabled="false">home</a></li>
 					<li>
-						<a href="./products.html" class="nav__link" aria-disabled="true">products</a>
+						<a href="./products.html" class="nav__link" aria-disabled="false">products</a>
 					</li>
 						<a href="./contact.html" class="nav__link" aria-disabled="false">contact</a>
 					</li>
