--- a/cart.html
+++ b/cart.html
@@ -3,11 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="filterable list of all products">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />        
+        <meta name="description" content="your shopping cart items">
 		<link rel="stylesheet" href="./style.css" />
-        <script type="module" src="./js/products.js"></script>
-		<title>Rainydays Jacket Co. | Products</title>
+		<title>Rainydays Jacket Co. | Cart</title>
 	</head>
 	<body>
 		<header>
@@ -38,12 +37,12 @@
 				<ul class="nav__links flex">
 					<li><a href="./index.html" class="nav__link" aria-disabled="false">home</a></li>
 					<li>
-						<a href="./products.html" class="nav__link" aria-disabled="true">products</a>
+						<a href="./products.html" class="nav__link" aria-disabled="false">products</a>
 					</li>
 						<a href="./contact.html" class="nav__link" aria-disabled="false">contact</a>
 					</li>
 					<li>
-						<a href="./cart.html" class="nav__link" aria-disabled="false">shopping cart</a>
+						<a href="./cart.html" class="nav__link" aria-disabled="true">shopping cart</a>
 					</li>
 				</ul>
 			</nav>
