set max width on carousel

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				</ul>
 			</nav>
 		</header>
-		<main>
+		<main class="flex column">
 			<h1 class="flex">Browse our selection!</h1>
 			<div class="carousel__wrapper flex">
 				<ul class="carousel grid">
