--- a/products.html
+++ b/products.html
@@ -18,7 +18,7 @@
 				<div class="hamburger__link">
 					<svg
 						xmlns="http://www.w3.org/2000/svg"
-						class="icon icon-tabler icon-tabler-menu-2 hamburger__link"
+						class="hamburger__link"
 						id="burgerClosed"
 						width="24"
 						height="24"
@@ -50,7 +50,20 @@
 		</header>
 		<main>
 
-            <div class="product__grid"></div>
+            <div class="products__container flex">
+                <div class="product"></div>
+                <div class="product"></div>
+                <div class="product"></div>
+                <div class="product"></div>
+                <div class="product"></div>
+                <div class="product"></div>
+                <div class="product"></div>
+                <div class="product"></div>
+                <div class="product"></div>
+                <div class="product"></div>
+                <div class="product"></div>
+                <div class="product"></div>
+            </div>
 
 		</main>
 		<footer class="flex">
