toggle display on navLinks with navToggle

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						<path d="M4 18l16 0" id="botLine" class="bot__line"></path>
 					</svg>
 				</div>
-				<ul class="nav__links flex">
+				<ul class="nav__links flex" id="navLinks">
 					<li><a href="./index.html" class="nav__link" aria-disabled="true">home</a></li>
 					<li>
 						<a href="./products.html" class="nav__link" aria-disabled="false">products</a>
