--- a/products.html
+++ b/products.html
@@ -48,7 +48,7 @@
 				</ul>
 			</nav>
 		</header>
-		<main>
+		<main class="flex column">
 
             <div class="products__container flex">
             </div>
