--- a/cart.html
+++ b/cart.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />        
-        <meta name="description" content="your shopping cart items">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="your shopping cart items" />
 		<link rel="stylesheet" href="./style.css" />
 		<title>Rainydays Jacket Co. | Cart</title>
 	</head>
@@ -14,10 +14,44 @@
 				<a href="./index.html" class="logo"
 					><img src="./images/logo.png" alt="logo image"
 				/></a>
+				<ul class="nav__links flex hidden">
+					<li>
+						<a
+							href="./index.html"
+							class="nav__link"
+							aria-disabled="false"
+							>home</a
+						>
+					</li>
+					<li>
+						<a
+							href="./products.html"
+							class="nav__link"
+							aria-disabled="true"
+							>products</a
+						>
+					</li>
+					<li>
+						<a
+							href="./contact.html"
+							class="nav__link"
+							aria-disabled="false"
+							>contact</a
+						>
+					</li>
+					<li>
+						<a
+							href="./cart.html"
+							class="nav__link"
+							aria-disabled="false"
+							>shopping cart</a
+						>
+					</li>
+				</ul>
 				<div class="hamburger__link">
 					<svg
 						xmlns="http://www.w3.org/2000/svg"
-						class="icon icon-tabler icon-tabler-menu-2 hamburger__link"
+						class="hamburger__link"
 						id="burgerClosed"
 						width="24"
 						height="24"
@@ -29,28 +63,28 @@
 						stroke-linejoin="round"
 						aria-expanded="false"
 					>
-						<path d="M4 6l16 0" id="topLine" class="top__line"></path>
-						<path d="M4 12l16 0" id="midLine" class="mid__line"></path>
-						<path d="M4 18l16 0" id="botLine" class="bot__line"></path>
+						<path
+							d="M4 6l16 0"
+							id="topLine"
+							class="top__line"
+						></path>
+						<path
+							d="M4 12l16 0"
+							id="midLine"
+							class="mid__line"
+						></path>
+						<path
+							d="M4 18l16 0"
+							id="botLine"
+							class="bot__line"
+						></path>
 					</svg>
 				</div>
-				<ul class="nav__links flex">
-					<li><a href="./index.html" class="nav__link" aria-disabled="false">home</a></li>
-					<li>
-						<a href="./products.html" class="nav__link" aria-disabled="false">products</a>
-					</li>
-						<a href="./contact.html" class="nav__link" aria-disabled="false">contact</a>
-					</li>
-					<li>
-						<a href="./cart.html" class="nav__link" aria-disabled="true">shopping cart</a>
-					</li>
-				</ul>
 			</nav>
 		</header>
+
 		<main>
-
-            <div class="product__grid"></div>
-
+			<div class="product__grid"></div>
 		</main>
 		<footer class="flex">
 			<div class="footer__wrapper flex">
