--- a/index.html
+++ b/index.html
@@ -11,42 +11,38 @@
 	</head>
 	<body>
 		<header>
-			<nav class="flex">
-				<a href="./index.html" class="logo"
-					><img src="./images/logo.png" alt="logo image"
-				/></a>
-				<div class="hamburger__link">
-					<svg
-						xmlns="http://www.w3.org/2000/svg"
-						class="icon icon-tabler icon-tabler-menu-2 hamburger__link"
-						id="burgerClosed"
-						width="24"
-						height="24"
-						viewBox="0 0 24 24"
-						stroke-width="2"
-						stroke="currentColor"
-						fill="none"
-						stroke-linecap="round"
-						stroke-linejoin="round"
-						aria-expanded="false"
-					>
-						<path d="M4 6l16 0" id="topLine" class="top__line"></path>
-						<path d="M4 12l16 0" id="midLine" class="mid__line"></path>
-						<path d="M4 18l16 0" id="botLine" class="bot__line"></path>
-					</svg>
-				</div>
-				<ul class="nav__links flex" id="navLinks">
-					<li><a href="./index.html" class="nav__link" aria-disabled="true">home</a></li>
-					<li>
-						<a href="./products.html" class="nav__link" aria-disabled="false">products</a>
-					</li>
-						<a href="./contact.html" class="nav__link" aria-disabled="false">contact</a>
-					</li>
-					<li>
-						<a href="./cart.html" class="nav__link" aria-disabled="false">shopping cart</a>
-					</li>
-				</ul>
-			</nav>
+			<header>
+				<nav class="flex">
+					<a href="./index.html" class="logo"
+						><img src="./images/logo.png" alt="logo image"
+					/></a>
+					<ul class="nav__links flex hidden">
+						<li><a href="./index.html" class="nav__link" aria-disabled="false">home</a></li>
+						<li><a href="./products.html" class="nav__link" aria-disabled="true">products</a></li>
+						<li><a href="./contact.html" class="nav__link" aria-disabled="false">contact</a></li>
+						<li><a href="./cart.html" class="nav__link" aria-disabled="false">shopping cart</a></li>
+					</ul>
+					<div class="hamburger__link">
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							class="hamburger__link"
+							id="burgerClosed"
+							width="24"
+							height="24"
+							viewBox="0 0 24 24"
+							stroke-width="2"
+							stroke="currentColor"
+							fill="none"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+							aria-expanded="false">
+							<path d="M4 6l16 0" id="topLine" class="top__line"></path>
+							<path d="M4 12l16 0" id="midLine" class="mid__line"></path>
+							<path d="M4 18l16 0" id="botLine" class="bot__line"></path>
+						</svg>
+					</div>            
+				</nav>
+			</header>
 		</header>
 		<main class="flex column">
 			<h1 class="flex">Browse our selection!</h1>
