--- a/products.html
+++ b/products.html
@@ -15,43 +15,45 @@
 				<a href="./index.html" class="logo"
 					><img src="./images/logo.png" alt="logo image"
 				/></a>
-				<div class="hamburger__link">
-					<svg
-						xmlns="http://www.w3.org/2000/svg"
-						class="hamburger__link"
-						id="burgerClosed"
-						width="24"
-						height="24"
-						viewBox="0 0 24 24"
-						stroke-width="2"
-						stroke="currentColor"
-						fill="none"
-						stroke-linecap="round"
-						stroke-linejoin="round"
-						aria-expanded="false"
-					>
-						<path d="M4 6l16 0" id="topLine" class="top__line"></path>
-						<path d="M4 12l16 0" id="midLine" class="mid__line"></path>
-						<path d="M4 18l16 0" id="botLine" class="bot__line"></path>
-					</svg>
-				</div>
-				<ul class="nav__links flex">
-					<li><a href="./index.html" class="nav__link" aria-disabled="false">home</a></li>
-					<li>
-						<a href="./products.html" class="nav__link" aria-disabled="true">products</a>
-					</li>
-						<a href="./contact.html" class="nav__link" aria-disabled="false">contact</a>
-					</li>
-					<li>
-						<a href="./cart.html" class="nav__link" aria-disabled="false">shopping cart</a>
-					</li>
-				</ul>
+				<ul class="nav__links flex hidden">
+                    <li><a href="./index.html" class="nav__link" aria-disabled="false">home</a></li>
+					<li><a href="./products.html" class="nav__link" aria-disabled="true">products</a></li>
+                    <li><a href="./contact.html" class="nav__link" aria-disabled="false">contact</a></li>
+                    <li><a href="./cart.html" class="nav__link" aria-disabled="false">shopping cart</a></li>
+                </ul>
+                <div class="hamburger__link">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        class="hamburger__link"
+                        id="burgerClosed"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        stroke-width="2"
+                        stroke="currentColor"
+                        fill="none"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        aria-expanded="false">
+                        <path d="M4 6l16 0" id="topLine" class="top__line"></path>
+                        <path d="M4 12l16 0" id="midLine" class="mid__line"></path>
+                        <path d="M4 18l16 0" id="botLine" class="bot__line"></path>
+                    </svg>
+                </div>            
 			</nav>
 		</header>
 		<main class="flex column">
-
-            <div class="products__container flex">
+            <div class="searchbar__wrapper">
+                <input type="text" name="jacketSearch" id="jacketSearch" placeholder="Search our collection...">
+                <label for="jacketSearch">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="search__icon" id="searchGlass" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
+                        <path d="M21 21l-6 -6"></path>
+                     </svg>
+                </label>
             </div>
+
+            <div class="products__container flex"></div>
 
 		</main>
 		<footer class="flex">
