--- a/index.html
+++ b/index.html
@@ -3,47 +3,90 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />		
-        <meta name="description" content="home page for Rainydays Jacket Company">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="description"
+			content="home page for Rainydays Jacket Company"
+		/>
 		<link rel="stylesheet" href="./style.css" />
 		<script type="module" src="./js/main.js"></script>
 		<title>Rainydays Jacket Co. | Home</title>
 	</head>
 	<body>
 		<header>
-			<header>
-				<nav class="flex">
-					<a href="./index.html" class="logo"
-						><img src="./images/logo.png" alt="logo image"
-					/></a>
-					<ul class="nav__links flex hidden">
-						<li><a href="./index.html" class="nav__link" aria-disabled="false">home</a></li>
-						<li><a href="./products.html" class="nav__link" aria-disabled="true">products</a></li>
-						<li><a href="./contact.html" class="nav__link" aria-disabled="false">contact</a></li>
-						<li><a href="./cart.html" class="nav__link" aria-disabled="false">shopping cart</a></li>
-					</ul>
-					<div class="hamburger__link">
-						<svg
-							xmlns="http://www.w3.org/2000/svg"
-							class="hamburger__link"
-							id="burgerClosed"
-							width="24"
-							height="24"
-							viewBox="0 0 24 24"
-							stroke-width="2"
-							stroke="currentColor"
-							fill="none"
-							stroke-linecap="round"
-							stroke-linejoin="round"
-							aria-expanded="false">
-							<path d="M4 6l16 0" id="topLine" class="top__line"></path>
-							<path d="M4 12l16 0" id="midLine" class="mid__line"></path>
-							<path d="M4 18l16 0" id="botLine" class="bot__line"></path>
-						</svg>
-					</div>            
-				</nav>
-			</header>
+			<nav class="flex">
+				<a href="./index.html" class="logo"
+					><img src="./images/logo.png" alt="logo image"
+				/></a>
+				<ul class="nav__links flex hidden">
+					<li>
+						<a
+							href="./index.html"
+							class="nav__link"
+							aria-disabled="false"
+							>home</a
+						>
+					</li>
+					<li>
+						<a
+							href="./products.html"
+							class="nav__link"
+							aria-disabled="true"
+							>products</a
+						>
+					</li>
+					<li>
+						<a
+							href="./contact.html"
+							class="nav__link"
+							aria-disabled="false"
+							>contact</a
+						>
+					</li>
+					<li>
+						<a
+							href="./cart.html"
+							class="nav__link"
+							aria-disabled="false"
+							>shopping cart</a
+						>
+					</li>
+				</ul>
+				<div class="hamburger__link">
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						class="hamburger__link"
+						id="burgerClosed"
+						width="24"
+						height="24"
+						viewBox="0 0 24 24"
+						stroke-width="2"
+						stroke="currentColor"
+						fill="none"
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						aria-expanded="false"
+					>
+						<path
+							d="M4 6l16 0"
+							id="topLine"
+							class="top__line"
+						></path>
+						<path
+							d="M4 12l16 0"
+							id="midLine"
+							class="mid__line"
+						></path>
+						<path
+							d="M4 18l16 0"
+							id="botLine"
+							class="bot__line"
+						></path>
+					</svg>
+				</div>
+			</nav>
 		</header>
+
 		<main class="flex column">
 			<h1 class="flex">Browse our selection!</h1>
 			<div class="carousel__wrapper flex">
