completed searchBar functionality

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 					/>
 				</svg>
 				<button class="view--products" id="viewProducts">
-					View all products
+					<a href="./products.html">View all products</a>
 				</button>
 				<svg
 					width="30"
