--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 						stroke-linecap="round"
 						stroke-linejoin="round"
 						aria-expanded="false"
+						role="button"
 					>
 						<path
 							d="M4 6l16 0"
