--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<header>
 			<nav class="flex">
 				<a href="./index.html" class="logo"
-					><img src="./images/logo.png" alt="logo image"
+					><img src="./images/logo.png" alt="Rainydays logo link to home page"
 				/></a>
 				<ul class="nav__links flex hidden">
 					<li>
@@ -122,9 +122,7 @@
 						fill="currentColor"
 					/>
 				</svg>
-				<button class="view--products" id="viewProducts">
-					<a href="./products.html">View all products</a>
-				</button>
+				<a class="button" href="./products.html">View all products</a>
 				<svg
 					width="30"
 					height="23"
