added heading to products page

--- a/products.html
+++ b/products.html
@@ -43,7 +43,7 @@
 			</nav>
 		</header>
 		<main class="flex column">
-
+			<h1 class="sr-only">Search through all of our products!</h1>
             <div class="searchbar__container">
                 <!-- search bar -->
                 <div class="searchbar__wrapper flex">
