--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<a
 							href="./index.html"
 							class="nav__link"
-							aria-disabled="false"
+							data-disabled="true"
 							>home</a
 						>
 					</li>
@@ -31,7 +31,7 @@
 						<a
 							href="./products.html"
 							class="nav__link"
-							aria-disabled="true"
+							data-disabled="true"
 							>products</a
 						>
 					</li>
@@ -39,7 +39,7 @@
 						<a
 							href="./contact.html"
 							class="nav__link"
-							aria-disabled="false"
+							data-disabled="false"
 							>contact</a
 						>
 					</li>
@@ -47,7 +47,7 @@
 						<a
 							href="./cart.html"
 							class="nav__link"
-							aria-disabled="false"
+							data-disabled="false"
 							>shopping cart</a
 						>
 					</li>
