--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<a
 							href="./products.html"
 							class="nav__link"
-							data-disabled="true"
+							data-disabled="false"
 							>products</a
 						>
 					</li>
