fixed aria labels on contact info for index

--- a/index.html
+++ b/index.html
@@ -178,13 +178,13 @@
 			<div class="footer__wrapper flex">
 				<ul
 					class="contact__info flex column"
-					aria-label="contact information"
+					aria-describedby="contact information"
 				>
-					<li aria-label="address of headquarters">
+					<li aria-roledescription="address of headquarters">
 						Rainydays Inc<br />Middlebury, IN 46540
 					</li>
-					<li aria-label="telephone number">+47 909 ** 063</li>
-					<li aria-label="email">
+					<li aria-roledescription="telephone number">+47 909 ** 063</li>
+					<li aria-roledescription="email">
 						whats_your_problem?@rainydays.wtf
 					</li>
 				</ul>
