fixed role for burger svg on all pages

--- a/cart.html
+++ b/cart.html
@@ -62,6 +62,7 @@
 						stroke-linecap="round"
 						stroke-linejoin="round"
 						aria-expanded="false"
+						role="button"
 					>
 						<path
 							d="M4 6l16 0"
