--- a/products.html
+++ b/products.html
@@ -34,7 +34,8 @@
                         fill="none"
                         stroke-linecap="round"
                         stroke-linejoin="round"
-                        aria-expanded="false">
+                        aria-expanded="false"
+						role="button">
                         <path d="M4 6l16 0" id="topLine" class="top__line"></path>
                         <path d="M4 12l16 0" id="midLine" class="mid__line"></path>
                         <path d="M4 18l16 0" id="botLine" class="bot__line"></path>
