--- a/product.html
+++ b/product.html
@@ -15,10 +15,10 @@
 					><img src="./images/logo.png" alt="logo image"
 				/></a>
 				<ul class="nav__links flex hidden">
-                    <li><a href="./index.html" class="nav__link" aria-disabled="false">home</a></li>
-					<li><a href="./products.html" class="nav__link" aria-disabled="true">products</a></li>
-                    <li><a href="./contact.html" class="nav__link" aria-disabled="false">contact</a></li>
-                    <li><a href="./cart.html" class="nav__link" aria-disabled="false">shopping cart</a></li>
+                    <li><a href="./index.html" class="nav__link">home</a></li>
+					<li><a href="./products.html" class="nav__link">products</a></li>
+                    <li><a href="./contact.html" class="nav__link">contact</a></li>
+                    <li><a href="./cart.html" class="nav__link">shopping cart</a></li>
                 </ul>
                 <div class="hamburger__link">
                     <svg
