--- a/cart.html
+++ b/cart.html
@@ -19,7 +19,7 @@
 						<a
 							href="./index.html"
 							class="nav__link"
-							aria-disabled="false"
+							data-disabled="false"
 							>home</a
 						>
 					</li>
@@ -27,23 +27,15 @@
 						<a
 							href="./products.html"
 							class="nav__link"
-							aria-disabled="true"
+							data-disabled="false"
 							>products</a
-						>
-					</li>
-					<li>
-						<a
-							href="./contact.html"
-							class="nav__link"
-							aria-disabled="false"
-							>contact</a
 						>
 					</li>
 					<li>
 						<a
 							href="./cart.html"
 							class="nav__link"
-							aria-disabled="false"
+							data-disabled="true"
 							>shopping cart</a
 						>
 					</li>
