added header to all pages

--- a/cart.html
+++ b/cart.html
@@ -77,6 +77,7 @@
 		</header>
 
 		<main>
+			<h1 class="sr-only">Browse all of our products!</h1>
 			<div class="product__grid"></div>
 		</main>
 		<footer class="flex">
