--- a/cart.html
+++ b/cart.html
@@ -12,7 +12,7 @@
 		<header>
 			<nav class="flex">
 				<a href="./index.html" class="logo"
-					><img src="./images/logo.png" alt="logo image"
+					><img src="./images/logo.png" alt="Rainydays logo link to home page"
 				/></a>
 				<ul class="nav__links flex hidden">
 					<li>
