added loading animation

--- a/index.html
+++ b/index.html
@@ -13,10 +13,24 @@
 		<title>Rainydays Jacket Co. | Home</title>
 	</head>
 	<body>
+		<div class="loader">
+			<div class="balls">
+				<div class="ball"></div>
+				<div class="ball"></div>
+				<div class="ball"></div>
+				<div class="ball"></div>
+				<div class="ball"></div>
+				<div class="ball"></div>
+				<div class="ball"></div>
+				<div class="ball"></div>
+			</div>
+		</div>
 		<header>
 			<nav class="flex">
 				<a href="./index.html" class="logo"
-					><img src="./images/logo.png" alt="Rainydays logo link to home page"
+					><img
+						src="./images/logo.png"
+						alt="Rainydays logo link to home page"
 				/></a>
 				<ul class="nav__links flex hidden">
 					<li>
@@ -168,16 +182,10 @@
 		</main>
 		<footer class="flex">
 			<div class="footer__wrapper flex">
-				<ul
-					class="contact__info flex column"
-				>
-					<li>
-						Rainydays Inc<br />Middlebury, IN 46540
-					</li>
+				<ul class="contact__info flex column">
+					<li>Rainydays Inc<br />Middlebury, IN 46540</li>
 					<li>+47 909 ** 063</li>
-					<li>
-						whats_your_problem?@rainydays.wtf
-					</li>
+					<li>whats_your_problem?@rainydays.wtf</li>
 				</ul>
 				<div class="social__icons flex">
 					<svg
