--- a/product.html
+++ b/product.html
@@ -9,6 +9,18 @@
 		<title>Rainydays Jacket Co. | Product</title>
 	</head>
 	<body>
+		<div class="loader">
+			<div class="balls">
+				<div class="ball"></div>
+				<div class="ball"></div>
+				<div class="ball"></div>
+				<div class="ball"></div>
+				<div class="ball"></div>
+				<div class="ball"></div>
+				<div class="ball"></div>
+				<div class="ball"></div>
+			</div>
+		</div>
 		<header>
 			<nav class="flex">
 				<a href="./index.html" class="logo"
