--- a/products.html
+++ b/products.html
@@ -10,6 +10,18 @@
 		<title>Rainydays Jacket Co. | Products</title>
 	</head>
 	<body>
+		<div class="loader">
+			<div class="balls">
+				<div class="ball"></div>
+				<div class="ball"></div>
+				<div class="ball"></div>
+				<div class="ball"></div>
+				<div class="ball"></div>
+				<div class="ball"></div>
+				<div class="ball"></div>
+				<div class="ball"></div>
+			</div>
+		</div>
 		<header>
 			<nav class="flex">
 				<a href="./index.html" class="logo"
