--- a/products.html
+++ b/products.html
@@ -133,7 +133,7 @@
 			<!-- products container -->
 			<div class="products__container flex"></div>
 		</main>
-		<!-- <div class="product__modal">
+		<div class="product__modal hide__product-modal" id="productModal">
 			<div class="product__container">
 				<div class="image__container">
 					<img
@@ -145,6 +145,7 @@
 				<div class="product__modal-content">
 					<h3>Name of Jacket</h3>
 					<h4>Price</h4>
+					<p id="productDescription">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi quam obcaecati impedit quaerat repellendus, voluptas laboriosam sunt? Quasi iure asperiores earum consequatur!</p>
 					<div class="sizes__wrapper">
 						<p>XS</p>
 						<p>S</p>
@@ -152,8 +153,10 @@
 						<p>L</p>
 						<p>XL</p>
 					</div>
+					<button class="add__cart" id="addCart">Add to cart</button>
+					<h5 id="modalX" class="modalX">X</h5>
 				</div>
-			</div> -->
+			</div>
 		</div>
 		<footer class="flex">
 			<div class="footer__wrapper flex">
