images update in modal when pressed

--- a/products.html
+++ b/products.html
@@ -133,31 +133,10 @@
 			<!-- products container -->
 			<div class="products__container flex"></div>
 		</main>
-		<div class="product__modal hide__product-modal" id="productModal">
-			<div class="product__container">
-				<div class="image__container">
-					<img
-						src="https://images.unsplash.com/photo-1530041539828-114de669390e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8cmFpbiUyMGNvYXR8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
-						alt="filler photo"
-						id="individIMG"
-					/>
-				</div>
-				<div class="product__modal-content">
-					<h3>Name of Jacket</h3>
-					<h4>Price</h4>
-					<p id="productDescription">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi quam obcaecati impedit quaerat repellendus, voluptas laboriosam sunt? Quasi iure asperiores earum consequatur!</p>
-					<div class="sizes__wrapper">
-						<p>XS</p>
-						<p>S</p>
-						<p>M</p>
-						<p>L</p>
-						<p>XL</p>
-					</div>
-					<button class="add__cart" id="addCart">Add to cart</button>
-					<h5 id="modalX" class="modalX">X</h5>
-				</div>
-			</div>
-		</div>
+
+		<!-- inidiviual product modal -->
+		<div class="product__modal hide__product-modal" id="productModal"></div>
+		
 		<footer class="flex">
 			<div class="footer__wrapper flex">
 				<ul class="contact__info flex column">
