--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<a
 							href="./cart.html"
 							class="nav__link"
-							data-disabled="false"
+							data-disabled="true"
 							>shopping cart</a
 						>
 					</li>
