--- a/products.html
+++ b/products.html
@@ -50,7 +50,7 @@
 						<a
 							href="./cart.html"
 							class="nav__link"
-							data-disabled="false"
+							data-disabled="true"
 							>shopping cart</a
 						>
 					</li>
