--- a/products.html
+++ b/products.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="filterable list of all products" />
+		<meta name="description" content="filterable list of all products with inidiviual product " />
 		<link rel="stylesheet" href="./style.css" />
 		<script type="module" src="./js/products.js"></script>
 		<title>Rainydays Jacket Co. | Products</title>
