added modal to index carousel

--- a/index.html
+++ b/index.html
@@ -180,6 +180,9 @@
 				</div>
 			</div>
 		</main>
+		
+		<!-- inidiviual product modal -->
+		<div class="product__modal hide__product-modal" id="productModal"></div>
 		<footer class="flex">
 			<div class="footer__wrapper flex">
 				<ul class="contact__info flex column">
