--- a/details.html
+++ b/details.html
@@ -94,19 +94,24 @@
 			</nav>
 		</header>
 
-        <div class="details__container">
-            <div id="detailsImage">
-                <img src="" alt="">
-            </div>
-            <h1 id="detailsTitle">The Jacket Name Goes here</h1>
-            <h2 id="detailsPrice">The Price here</h2>
-            <p id="details">Details here</p>
-            <div class="sizes__wrapper">
-                <p>XS</p>
-                <p>S</p>
-                <p>M</p>
-                <p>L</p>
-                <p>XL</p>
+        <div class="details__wrapper flex">
+            <div class="details__container flex">
+                <div id="detailsImage" class="details__image">
+                    <img src="" alt="">
+                </div>
+                <div class="details__content flex column">
+                    <h1 id="detailsTitle">The Jacket Name Goes here</h1>
+                    <h2 id="detailsPrice">The Price here</h2>
+                    <p id="details">Details here</p>
+                    <div class="sizes__wrapper">
+                        <p>XS</p>
+                        <p>S</p>
+                        <p>M</p>
+                        <p>L</p>
+                        <p>XL</p>
+                    </div>
+                    <button>Add to Cart!</button>
+                </div>
             </div>
         </div>
 
