added hotjar to head of all html

--- a/details.html
+++ b/details.html
@@ -9,7 +9,28 @@
 			content="filterable list of all products with inidiviual product "
 		/>
 		<link rel="stylesheet" href="./style.css" />
-        <script type="module" src="./js/details.js"></script>
+		<script type="module" src="./js/details.js"></script>
+		<!-- Hotjar Tracking Code for https://skinnyk-rainydaze.netlify.app/ -->
+		<script>
+			(function (h, o, t, j, a, r) {
+				h.hj =
+					h.hj ||
+					function () {
+						(h.hj.q = h.hj.q || []).push(arguments);
+					};
+				h._hjSettings = { hjid: 3482244, hjsv: 6 };
+				a = o.getElementsByTagName("head")[0];
+				r = o.createElement("script");
+				r.async = 1;
+				r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+				a.appendChild(r);
+			})(
+				window,
+				document,
+				"https://static.hotjar.com/c/hotjar-",
+				".js?sv="
+			);
+		</script>
 		<title>Rainydays Jacket Co. | Product Details</title>
 	</head>
 	<body>
@@ -94,26 +115,26 @@
 			</nav>
 		</header>
 
-        <div class="details__wrapper flex">
-            <div class="details__container flex">
-                <div id="detailsImage" class="details__image">
-                    <img src="" alt="">
-                </div>
-                <div class="details__content flex column">
-                    <h1 id="detailsTitle">The Jacket Name Goes here</h1>
-                    <h2 id="detailsPrice">The Price here</h2>
-                    <p id="details">Details here</p>
-                    <div class="sizes__wrapper">
-                        <p>XS</p>
-                        <p>S</p>
-                        <p>M</p>
-                        <p>L</p>
-                        <p>XL</p>
-                    </div>
-                    <button>Add to Cart!</button>
-                </div>
-            </div>
-        </div>
+		<div class="details__wrapper flex">
+			<div class="details__container flex">
+				<div id="detailsImage" class="details__image">
+					<img src="" alt="" />
+				</div>
+				<div class="details__content flex column">
+					<h1 id="detailsTitle">The Jacket Name Goes here</h1>
+					<h2 id="detailsPrice">The Price here</h2>
+					<p id="details">Details here</p>
+					<div class="sizes__wrapper">
+						<p>XS</p>
+						<p>S</p>
+						<p>M</p>
+						<p>L</p>
+						<p>XL</p>
+					</div>
+					<button>Add to Cart!</button>
+				</div>
+			</div>
+		</div>
 
 		<footer class="flex">
 			<div class="footer__wrapper flex">
