--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
 		/>
 		<link rel="stylesheet" href="./style.css" />
 		<script type="module" src="./js/main.js"></script>
+		<!-- Hotjar Tracking Code for https://skinnyk-rainydaze.netlify.app/ -->
+		<script>
+			(function (h, o, t, j, a, r) {
+				h.hj =
+					h.hj ||
+					function () {
+						(h.hj.q = h.hj.q || []).push(arguments);
+					};
+				h._hjSettings = { hjid: 3482244, hjsv: 6 };
+				a = o.getElementsByTagName("head")[0];
+				r = o.createElement("script");
+				r.async = 1;
+				r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+				a.appendChild(r);
+			})(
+				window,
+				document,
+				"https://static.hotjar.com/c/hotjar-",
+				".js?sv="
+			);
+		</script>
 		<title>Rainydays Jacket Co. | Home</title>
 	</head>
 	<body>
@@ -180,7 +201,7 @@
 				</div>
 			</div>
 		</main>
-		
+
 		<!-- inidiviual product modal -->
 		<div class="product__modal hide__product-modal" id="productModal"></div>
 		<footer class="flex">
