--- a/products.html
+++ b/products.html
@@ -4,9 +4,33 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="filterable list of all products with inidiviual product " />
+		<meta
+			name="description"
+			content="filterable list of all products with inidiviual product "
+		/>
 		<link rel="stylesheet" href="./style.css" />
 		<script type="module" src="./js/products.js"></script>
+		<!-- Hotjar Tracking Code for https://skinnyk-rainydaze.netlify.app/ -->
+		<script>
+			(function (h, o, t, j, a, r) {
+				h.hj =
+					h.hj ||
+					function () {
+						(h.hj.q = h.hj.q || []).push(arguments);
+					};
+				h._hjSettings = { hjid: 3482244, hjsv: 6 };
+				a = o.getElementsByTagName("head")[0];
+				r = o.createElement("script");
+				r.async = 1;
+				r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+				a.appendChild(r);
+			})(
+				window,
+				document,
+				"https://static.hotjar.com/c/hotjar-",
+				".js?sv="
+			);
+		</script>
 		<title>Rainydays Jacket Co. | Products</title>
 	</head>
 	<body>
@@ -136,7 +160,7 @@
 
 		<!-- inidiviual product modal -->
 		<div class="product__modal hide__product-modal" id="productModal"></div>
-		
+
 		<footer class="flex">
 			<div class="footer__wrapper flex">
 				<ul class="contact__info flex column">
